test/1.4/errors/T_ESYNTAX_old_anon_bank.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// Anonymous banks no longer allowed
/// ERROR ESYNTAX
bank {
}
